--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URL = "mongodb+srv://pizza:8bTIgrmxOyZ2UVEo@cluster0.nnzchmo.mongodb.net/pizza-test"
+NEXTAUTH_URL = "http://localhost:3000/"
+SECRET = "AJOHJSOIKHS"
