--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URL = "mongodb+srv://pizza:8bTIgrmxOyZ2UVEo@cluster0.nnzchmo.mongodb.net/pizza-test"
 NEXTAUTH_URL = "http://localhost:3000/"
 SECRET = "AJOHJSOIKHS"
+GOOGLE_CLIENT_ID = "32377857639-spsku0tapks6pefg5somq3ndi39aojob.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
